--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "sass": "sass --watch ./sass/scss/style.scss:./sass/css/style.css"
+    "sass": "sass --watch ./sass/scss/:./sass/css/"
   },
   "author": "kannara kheng",
   "license": "ISC",
